# auth0-example-rs

./: .env.example  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  docker-compose.yml
src/: auth.rs  extractor.rs  lib.rs  main.rs  server.rs
src/handler/: callback.rs  home.rs  login.rs  logout.rs  mod.rs  user.rs
templates/: user.html
